test: 상품 관련 API 테스트 코드 작성